package mvp;

message MVPOperationDesc {
  required string name = 1;
}
